<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefreshMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#EDE1F1"
    >


    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fadingTextViewCovid"
        app:texts="@array/example"
        app:timeout="1000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COVID-19"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/holo_red_dark"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="4dp">

        <TextView
            android:id="@+id/textViewTotalConfirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            tools:text="1234567890"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:background="@drawable/text_stroke"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/textViewNewConfirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            tools:text="67890"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:background="@drawable/text_stroke"
            android:layout_marginStart="2dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginHorizontal="4dp">

        <TextView
            android:id="@+id/textViewTotalConfirmedSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/total_confirmed"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/textViewNewconfirmedSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/new_confirmed"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginStart="2dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="4dp">

        <TextView
            android:id="@+id/textViewTotalDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            tools:text="1234567890"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:background="@drawable/text_stroke"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/textViewNewDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            tools:text="67890"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:background="@drawable/text_stroke"
            android:layout_marginStart="2dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginHorizontal="4dp">

        <TextView
            android:id="@+id/textViewTotalDeathsSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/total_deaths"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/textViewNewdeathsSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/new_deaths"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginStart="2dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="4dp">

        <TextView
            android:id="@+id/textViewTotalRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            tools:text="1234567890"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:background="@drawable/text_stroke"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/textViewNewRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:padding="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="67890"
            android:textColor="@android:color/holo_red_light"
            android:background="@drawable/text_stroke"
            android:layout_marginStart="2dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginHorizontal="4dp">

        <TextView
            android:id="@+id/textViewTotalRecoverdSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/total_recovered"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/textViewNewRecoveredSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/new_recovered"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="4dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginStart="2dp"
            />



    </LinearLayout>

    <Button
        android:id="@+id/buttonCountryStatistics"
        android:text="Сountry statistics"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowColor="#4CAF50"/>

        <pl.droidsonroids.gif.GifImageView
        android:layout_marginVertical="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/virus_anim"
        android:background="@android:color/transparent"
        />




</LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>